# splatoon2-analyzer

./: CMakeLists.txt  README.md  main.cpp  ocr.cpp
scripts/: cut.sh  process.sh
